--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.2.5
+autopep8==1.5
 beautifulsoup4==4.8.2
 cachetools==4.0.0
 certifi==2019.11.28
@@ -21,8 +22,10 @@ numpy==1.18.2
 opencv-python==4.2.0.32
 Pillow==7.0.0
 protobuf==3.11.3
+psycopg2-binary==2.8.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.5.0
 pytz==2019.3
 requests==2.23.0
 rsa==4.0
