--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ gunicorn = "*"
 django-heroku = "*"
 dj-database-url = "*"
 autopep8 = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.8"
