--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-i https://pypi.org/simple
 asgiref==3.2.5
 autopep8==1.5
 beautifulsoup4==4.8.2
@@ -5,26 +6,27 @@ cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
 dj-database-url==0.5.0
-Django==3.0.4
 django-bootstrap4==1.1.1
 django-heroku==0.3.1
-django-storages==1.9.1
-google==2.0.3
+django-storages[google]==1.9.1
+django==3.0.4
 google-api-core==1.16.0
 google-auth==1.11.3
 google-cloud-core==1.3.0
 google-cloud-storage==1.26.0
 google-resumable-media==0.5.0
+google==2.0.3
 googleapis-common-protos==1.51.0
 gunicorn==20.0.4
 idna==2.9
 numpy==1.18.2
 opencv-python==4.2.0.32
-Pillow==7.0.0
+pillow==7.0.0
 protobuf==3.11.3
 psycopg2-binary==2.8.4
-pyasn1==0.4.8
+psycopg2==2.8.4
 pyasn1-modules==0.2.8
+pyasn1==0.4.8
 pycodestyle==2.5.0
 pytz==2019.3
 requests==2.23.0
